--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: workflow
+name: build
 
 on:
   pull_request:
@@ -44,7 +44,7 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/arm/v7,linux/arm64
+          platforms: linux/arm/v7,linux/arm64,linux/amd64
           provenance: false
           cache-from: type=gha
           cache-to: type=gha,mode=max
