--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,10 +20,10 @@ jobs:
           go-version: 1.20.1
       -
         name: Vet
-        run: go vet
+        run: cd cmd/terrarium-bot-v2 && go vet
       -
         name: Build
-        run: go build -v
+        run: cd cmd/terrarium-bot-v2 && go build -v
       -
         name: Test
-        run: go test -v
+        run: cd cmd/terrarium-bot-v2 && go test -v
