Support for pushover notification sounds

--- a/cmd/terrarium-bot-v2/configuration.yaml
+++ b/cmd/terrarium-bot-v2/configuration.yaml
@@ -145,6 +145,7 @@ sensor:
 notification:
   - id: pushover
     device: Alec-Phone
+    sound: tugboat
     userToken: PUSHOVER_USER_TOKEN # env variable name
     apiToken: PUSHOVER_APP_TOKEN # env variable name
     antiSpam: 1h # only receive alerts once an hour
